# git-sense

./: README.md  cli.py  pyproject.toml
gitsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
